# python_template

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
